--- a/lapFinder/testLaps.ipynb
+++ b/lapFinder/testLaps.ipynb
@@ -2,35 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lap 1 0:01:43.900000\n",
+      "Lap 2 0:01:38.500000\n",
+      "Lap 3 0:01:37.600000\n",
+      "Lap 4 0:01:37.600000\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\marti\\AppData\\Local\\Temp\\ipykernel_34732\\2285135240.py:13: DtypeWarning:\n",
-      "\n",
-      "Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "\n"
+      "C:\\Users\\marti\\AppData\\Local\\Temp\\ipykernel_3388\\178677189.py:11: DtypeWarning: Columns (0) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  log = pd.read_csv(\"exportedLog.csv\", delimiter=';')\n"
      ]
     }
    ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
-    "from statistics import stdev\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
+    "from haversine import haversine, Unit\n",
+    "import datetime\n",
     "\n",
     "#User Defined Variables\n",
     "circuitName = \"cartagena\"\n",
+    "finishLineMeters = 5\n",
     "\n",
     "#Read Log file\n",
     "log = pd.read_csv(\"exportedLog.csv\", delimiter=';')\n",
     "\n",
+    "#Remove lines with NaN's\n",
+    "log = log.dropna(subset=['LAT [Degrees]'])\n",
+    "log = log.dropna(subset=['LONG [Degrees]'])\n",
+    "\n",
     "#Import Circuits\n",
-    "with open(\"circuits.json\") as f:\n",
+    "with open(\"../circuits.json\") as f:\n",
     "    circuits = json.load(f)\n",
     "\n",
     "finishLineLat = circuits.get(circuitName).get('FinishLine').get('latitude')\n",
@@ -45,11 +57,25 @@
     "log = log.apply(pd.to_numeric)\n",
     "\n",
     "time = log['Time [s]']\n",
-    "lat = log['']\n",
-    "long = log['']\n",
+    "lat = log['LAT [Degrees]']\n",
+    "long = log['LONG [Degrees]']\n",
+    "\n",
+    "def isNearFinishLine(currentLat, currentLong):\n",
+    "    finishline = (finishLineLat, finishLineLong)\n",
+    "    currentLocation = (currentLat, currentLong)\n",
+    "    if haversine(finishline, currentLocation, unit='m') < finishLineMeters:\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "previousLapTime = 0\n",
+    "lapsCompleted = 0\n",
     "\n",
     "for x in range(0, len(time)):\n",
-    "    if log\n"
+    "    if isNearFinishLine(lat.iloc[x], long.iloc[x]):\n",
+    "        lapTime = time.iloc[x] - previousLapTime\n",
+    "        previousLapTime = time.iloc[x]\n",
+    "        lapsCompleted = lapsCompleted + 1\n",
+    "        print(\"Lap\", lapsCompleted, str(datetime.timedelta(seconds=lapTime)))"
    ]
   }
  ],
